--- a/MvcDemo.csproj
+++ b/MvcDemo.csproj
@@ -120,11 +120,13 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\DiscountController.cs" />
     <Compile Include="Controllers\HelloController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\DiscountModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -163,6 +165,8 @@
     <Content Include="Views\Hello\Wish.cshtml" />
     <Content Include="Views\Hello\Course.cshtml" />
     <Content Include="Views\Hello\List.cshtml" />
+    <Content Include="Views\Discount\Index.cshtml" />
+    <Content Include="Views\Shared\common.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
