--- a/Web.config
+++ b/Web.config
@@ -10,9 +10,15 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="localdbconnection" 
+     providerName="System.Data.SqlClient"    
+     connectionString="Data Source=(localdb)\v11.0;Initial Catalog=msdb;Integrated Security=True"  />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
+    <trace enabled="true"/>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
