--- a/Web.config
+++ b/Web.config
@@ -19,6 +19,9 @@
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
     <trace enabled="true"/>
+    <authentication mode="Forms">
+         <forms loginUrl="/User/Login"  />
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
