--- a/Web.config
+++ b/Web.config
@@ -11,16 +11,14 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="localdbconnection" 
-     providerName="System.Data.SqlClient"    
-     connectionString="Data Source=(localdb)\v11.0;Initial Catalog=msdb;Integrated Security=True"  />
+    <add name="localdbconnection" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=msdb;Integrated Security=True" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
-    <trace enabled="true"/>
+    <trace enabled="true" />
     <authentication mode="Forms">
-         <forms loginUrl="/User/Login"  />
+         <forms loginUrl="/User/Login" />
     </authentication>
   </system.web>
   <runtime>
